--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
 
                                 </g>
                             </svg>
-                            <p class="small_heading">Digital Experience Design Agency For Ambitions Brands </p>
+                            <h1 class="small_heading">Digital Experience Design Agency For Ambitions Brands </h1>
                             <div class="chapt-icon play-icon" style="    width: 100px;">
                                 <!-- <div class="scroll-down" style="    width: 100px;"> -->
                                 <div class="scroll-circle">
@@ -548,7 +548,7 @@
                                 <div class="c-hm-us_top">
                                     <div class="o-media o-media1 hm-us">
                                         <div data-loop="true" data-wf-ignore="true"
-                                            class="o-media_obj w-background-video w-background-video-atom">
+                                            class="o-media_obj w-background-video w-background-video-atom left-b">
                                             <video autoplay="" loop="" style="background-image:url" muted=""
                                                 playsinline="" data-wf-ignore="true" data-object-fit="cover">
                                                 <source src="/assets/resources/left.mp4" data-wf-ignore="true">
@@ -567,7 +567,7 @@
 
                                     </div>
                                     <div class="o-media o-media2 hm-us">
-                                        <div class="o-media_obj w-background-video w-background-video-atom">
+                                        <div class="o-media_obj w-background-video w-background-video-atom right-b">
                                             <video autoplay="" loop="" style="background-image:url" muted=""
                                                 playsinline="" data-wf-ignore="true" data-object-fit="cover">
                                                 <source src="/assets/resources/right.mp4" data-wf-ignore="true">
@@ -674,11 +674,10 @@
                 <section class="about-us-section" data-humcolor="#000">
                     <div class="about-us-inner d-flex">
                         <div class="about-us-images res">
-                            <!-- <img class="prlx" src="/assets/resources/img/about.png" alt=""
-                                title="" /> -->
-                            <video autoplay preload="" class="prlx">
+                            <img class="prlx" src="/assets/resources/img/about.png" alt="" title="" />
+                            <!-- <video autoplay preload="" class="prlx">
                                 <source src="/assets/resources/wav.mp4">
-                            </video>
+                            </video> -->
                         </div>
 
                         <div class="about-us-content">
@@ -721,7 +720,7 @@
                             <ul class="accordion-list">
                                 <li>
                                     <div class="accordion-title">
-                                        <h2><span>01</span> Strategy & Planning</h2>
+                                        <h2><span>01</span> Strategy </h2>
                                         <figure>
                                             <i class="arrow-icon-large"> <svg xmlns="http://www.w3.org/2000/svg"
                                                     viewBox="0 0 256.44 256.44">
@@ -736,17 +735,38 @@
                                         </figure>
                                     </div>
                                     <div class="cont">
-                                        <p>They say a winning strategy is hard to come by. We at Enigma Digital are
-                                            changing that belief, one client at a time!
+                                        <p>Strategic planning based on insight is the starting point of everything we
+                                            do. Using a
+                                            blend of strategic thinking, broad marketing experience, insights, proven
+                                            best
+                                            practices, and sound judgment, we create effective strategies that transform
+                                            insights
+                                            into actionable plans and deliver measurable results.
+
+                                        </p>
+                                        <p>
+                                            <b> We Offer:</b> Digital Advisory and Consulting, Integrated Digital
+                                            Marketing Plan
+                                            (D.M.P.), User Experience Development, Customer Experience Strategy,
+                                            Consumer
+                                            Research, Insights &amp; Target Market Analysis, Digital Capabilities
+                                            Development,
+                                            Persona Design &amp; Customer Segmentation, Competitive Analysis &amp;
+                                            Industry
+                                            Insights, Brand &amp; Content Strategy, Digital Marketing and Website
+                                            Performance
+                                            Audit.
                                         </p>
                                         <div class="en-form-submit"><a class="en-btn en-btn_send" data-magnetic
-                                                data-cursor="-opaque"><span data-text="Read More">Read More</span></a>
+                                                data-cursor="-opaque"><span
+                                                    data-text="Transform Your Business">Transform Your
+                                                    Business</span></a>
                                         </div>
                                     </div>
                                 </li>
                                 <li>
                                     <div class="accordion-title">
-                                        <h2><span>02</span>Interface Systems
+                                        <h2><span>02</span>DESIGN
                                         </h2>
                                         <figure>
                                             <i class="arrow-icon-large"> <svg xmlns="http://www.w3.org/2000/svg"
@@ -763,17 +783,31 @@
                                         </figure>
                                     </div>
                                     <div class="cont">
-                                        <p>They say a winning strategy is hard to come by. We at Enigma Digital are
-                                            changing that belief, one client at a time!
+                                        <p>We solve complex design problems through user research, expert analysis,
+                                            prototyping and collaborative design with users &amp; stakeholders.
+                                            Embracing the
+                                            power of modern tools and our proprietary approach, we to build delightful
+                                            &amp; intuitive
+                                            experiences to bridge the gap between the physical &amp; digital world.
+                                        </p>
+                                        <p>
+                                            <strong>We Offer:</strong> User Interface Design, User Experience Design,
+                                            Responsive Web Design,
+                                            Mobile App Design, Digital Interface Design, Design Systems Creation,
+                                            Experience
+                                            Mapping, User Flow Mapping, Wireframing &amp; Prototyping, Illustrations
+                                            &amp; Animations,
+                                            Visual Designs, and UI Kits.
                                         </p>
                                         <div class="en-form-submit"><a class="en-btn en-btn_send" data-magnetic
-                                                data-cursor="-opaque"><span data-text="Read More">Read More</span></a>
+                                                data-cursor="-opaque"><span data-text="Upgrade Your Experience">Upgrade
+                                                    Your Experience</span></a>
                                         </div>
                                     </div>
                                 </li>
                                 <li>
                                     <div class="accordion-title">
-                                        <h2><span>03</span>Digital Marketing</h2>
+                                        <h2><span>03</span>TECHNOLOGY</h2>
                                         <figure>
                                             <i class="arrow-icon-large"> <svg xmlns="http://www.w3.org/2000/svg"
                                                     viewBox="0 0 256.44 256.44">
@@ -788,17 +822,31 @@
                                         </figure>
                                     </div>
                                     <div class="cont">
-                                        <p>They say a winning strategy is hard to come by. We at Enigma Digital are
-                                            changing that belief, one client at a time!
+                                        <p>A human-centred, design-led approach to product development that leverages
+                                            cutting-edge technologies &amp; agile methodology, committed to putting you
+                                            on a path
+                                            to success in the ever-changing technological landscape.
+
+                                        </p>
+                                        <p>
+                                            <strong>We Offer:</strong> Front-End Development, Native &amp; Hybrid Mobile
+                                            Application
+                                            Development, Progressive Web Applications, Database Design &amp; Management,
+                                            Cloud Infrastructure Services, Testing &amp; Automation
+                                            TECH STACK - HTML, CSS, Sass, Less, JavaScript, jQuery, GSAP, Vue, React,
+                                            React Native, Ionic, Flutter, NodeJS, Spring, JAVA, Grails, Hibernate,
+                                            MySQL,
+                                            PostgreSQL, Oracle, Mongo, AWS and Google Cloud
                                         </p>
                                         <div class="en-form-submit"><a class="en-btn en-btn_send" data-magnetic
-                                                data-cursor="-opaque"><span data-text="Read More">Read More</span></a>
+                                                data-cursor="-opaque"><span data-text="Let’s Build Your Idea">Let’s
+                                                    Build Your Idea</span></a>
                                         </div>
                                     </div>
                                 </li>
                                 <li>
                                     <div class="accordion-title">
-                                        <h2><span>04</span>Development</h2>
+                                        <h2><span>04</span>MARKETING</h2>
                                         <figure>
                                             <i class="arrow-icon-large"> <svg xmlns="http://www.w3.org/2000/svg"
                                                     viewBox="0 0 256.44 256.44">
@@ -814,65 +862,30 @@
                                         </figure>
                                     </div>
                                     <div class="cont">
-                                        <p>They say a winning strategy is hard to come by. We at Enigma Digital are
-                                            changing that belief, one client at a time!
+                                        <p>We believe digital isn’t just the word of the moment. It is the way forward!
+                                            Combining
+                                            this belief with our passion for creating state-of-the-art digital campaigns
+                                            and
+
+                                            captivating user experiences, we have evolved into an agency capable of
+                                            adapting to
+                                            the ever-changing world of digital marketing.
+                                        </p>
+                                        <p>
+                                            <strong>We Offer:</strong> Social Media Management, Content Creation &amp;
+                                            Curation, Search Engine
+                                            Optimisation, Influencer Management, Auction Media Management, Online
+                                            Reputation Management, Media Planning &amp; Buying, Marketing Automation,
+                                            Email
+                                            Marketing, Conversion Rate Optimisation, Website &amp; SEO Analysis.
                                         </p>
                                         <div class="en-form-submit"><a class="en-btn en-btn_send" data-magnetic
-                                                data-cursor="-opaque"><span data-text="Read More">Read More</span></a>
+                                                data-cursor="-opaque"><span data-text="Ready? Let’s Get
+                                                Moving">Ready? Let’s Get
+                                                    Moving</span></a>
                                         </div>
                                     </div>
                                 </li>
-                                <li>
-                                    <div class="accordion-title">
-                                        <h2><span>05</span>Product Solutions</h2>
-                                        <figure>
-                                            <i class="arrow-icon-large"> <svg xmlns="http://www.w3.org/2000/svg"
-                                                    viewBox="0 0 256.44 256.44">
-                                                    <g id="Слой_2" data-name="Слой 2">
-                                                        <g id="Capa_1" data-name="Capa 1">
-                                                            <polygon
-                                                                points="15.09 0 15.09 42.69 183.58 42.69 0 226.27 30.17 256.44 213.75 72.86 213.75 241.36 256.44 241.36 256.44 0 15.09 0">
-                                                            </polygon>
-                                                        </g>
-                                                    </g>
-                                                </svg> </i>
-                                        </figure>
-                                    </div>
-                                    <div class="cont">
-                                        <p>They say a winning strategy is hard to come by. We at Enigma Digital are
-                                            changing that belief, one client at a time!
-                                        </p>
-                                        <div class="en-form-submit"><a class="en-btn en-btn_send" data-magnetic
-                                                data-cursor="-opaque"><span data-text="Read More">Read More</span></a>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="accordion-title">
-                                        <h2><span>06</span>Brand Solutions</h2>
-                                        <figure>
-                                            <i class="arrow-icon-large"> <svg xmlns="http://www.w3.org/2000/svg"
-                                                    viewBox="0 0 256.44 256.44">
-                                                    <g id="Слой_2" data-name="Слой 2">
-                                                        <g id="Capa_1" data-name="Capa 1">
-                                                            <polygon
-                                                                points="15.09 0 15.09 42.69 183.58 42.69 0 226.27 30.17 256.44 213.75 72.86 213.75 241.36 256.44 241.36 256.44 0 15.09 0">
-                                                            </polygon>
-                                                        </g>
-                                                    </g>
-                                                </svg> </i>
-                                        </figure>
-                                    </div>
-                                    <div class="cont">
-                                        <p>They say a winning strategy is hard to come by. We at Enigma Digital are
-                                            changing that belief, one client at a time!
-                                        </p>
-                                        <div class="en-form-submit"><a class="en-btn en-btn_send" data-magnetic
-                                                data-cursor="-opaque"><span data-text="Read More">Read More</span></a>
-                                        </div>
-                                    </div>
-                                </li>
-                            </ul>
                         </div>
 
                     </div>
@@ -891,7 +904,7 @@
 
                                 <!--Background Text-->
                                 <div class="recent-works-bg-text">
-                                    success stories
+                                    Our Works
                                 </div>
                                 <!--Background Text-->
 
