--- a/index.html
+++ b/index.html
@@ -922,7 +922,7 @@
                                     <div class="ar-work">
 
                                         <!--Project URL-->
-                                        <a href="" data-tilt data-tilt-glare="true" data-tilt-max="50"
+                                        <a href="patronum.html" data-tilt data-tilt-glare="true" data-tilt-max="30"
                                             data-tilt-speed="20" data-cursor-text="View"
                                             data-cursor=" -color-accent-lilac">
 
@@ -931,15 +931,16 @@
                                                 <img alt="Project Image" src="/assets/resources/img/work-patronum.png">
                                             </div>
                                             <!--/Project Image-->
+                                            <!--Project Title-->
+                                            <div class="ar-work-title">Patronum</div>
+                                            <!--/Project Title-->
+
+                                            <!--Project Category-->
+                                            <div class="ar-work-cat">Production</div>
+                                            <!--/Project Category-->
                                         </a>
 
-                                        <!--Project Title-->
-                                        <div class="ar-work-title">Spirits of #illusion</div>
-                                        <!--/Project Title-->
 
-                                        <!--Project Category-->
-                                        <div class="ar-work-cat">Production</div>
-                                        <!--/Project Category-->
 
                                     </div>
                                     <!--/Project-->
@@ -947,30 +948,33 @@
                                     <!--Project-->
                                     <div class="ar-work">
 
-                                        <!--Project URL--><a href="" data-tilt data-tilt-glare="true" data-tilt-max="50"
-                                            data-tilt-speed="20" data-cursor-text="View" data-cursor="-color-cert">
+                                        <!--Project URL--><a href="certvault.html" data-tilt data-tilt-glare="true"
+                                            data-tilt-max="30" data-tilt-speed="20" data-cursor-text="View"
+                                            data-cursor="-color-cert">
 
                                             <!--Project Image-->
                                             <div class="ar-work-image">
                                                 <img alt="Project Image" src="/assets/resources/img/work-certvault.png">
                                             </div>
                                             <!--/Project Image-->
-                                        </a>
-                                        <!--Project Title-->
-                                        <div class="ar-work-title">The Secrets</div>
-                                        <!--/Project Title-->
+                                            <!--Project Title-->
+                                            <div class="ar-work-title">Certvault</div>
+                                            <!--/Project Title-->
 
-                                        <!--Project Category-->
-                                        <div class="ar-work-cat">Photography</div>
-                                        <!--/Project Category-->
+                                            <!--Project Category-->
+                                            <div class="ar-work-cat">Photography</div>
+                                            <!--/Project Category-->
+                                        </a>
+
                                     </div>
                                     <!--/Project-->
 
                                     <!--Project-->
                                     <div class="ar-work">
 
-                                        <!--Project URL--><a href="" data-tilt data-tilt-glare="true" data-tilt-max="50"
-                                            data-tilt-speed="20" data-cursor-text="View" data-cursor="-color-dmtca">
+                                        <!--Project URL--><a href="dmtca.html" data-tilt data-tilt-glare="true"
+                                            data-tilt-max="30" data-tilt-speed="20" data-cursor-text="View"
+                                            data-cursor="-color-dmtca">
 
                                             <!--Project Image-->
                                             <div class="ar-work-image">
@@ -979,7 +983,7 @@
                                             <!--/Project Image-->
                                         </a>
                                         <!--Project Title-->
-                                        <div class="ar-work-title">Emerald Planet</div>
+                                        <div class="ar-work-title">Dmtca</div>
                                         <!--/Project Title-->
 
                                         <!--Project Category-->
@@ -991,8 +995,9 @@
                                     <!--Project-->
                                     <div class="ar-work">
 
-                                        <!--Project URL--><a href="" data-tilt data-tilt-glare="true" data-tilt-max="50"
-                                            data-tilt-speed="20" data-cursor-text="View" data-cursor="-color-bespin">
+                                        <!--Project URL--><a href="quickx.html" data-tilt data-tilt-glare="true"
+                                            data-tilt-max="30" data-tilt-speed="20" data-cursor-text="View"
+                                            data-cursor="-color-bespin">
 
                                             <!--Project Image-->
                                             <div class="ar-work-image">
@@ -1002,7 +1007,7 @@
                                         </a>
 
                                         <!--Project Title-->
-                                        <div class="ar-work-title">Rainbows</div>
+                                        <div class="ar-work-title">Quickx</div>
                                         <!--/Project Title-->
 
                                         <!--Project Category-->
@@ -1013,7 +1018,7 @@
                                     <!--/Project-->
 
                                     <!--Project-->
-                                    <div class="ar-work" data-tilt data-tilt-glare="true" data-tilt-max="50"
+                                    <div class="ar-work" data-tilt data-tilt-glare="true" data-tilt-max="30"
                                         data-tilt-speed="20">
                                         <!--Project URL-->
                                         <a href="">
@@ -1025,7 +1030,7 @@
                                         </a>
 
                                         <!--Project Title-->
-                                        <div class="ar-work-title">The Silk’s Nothing</div>
+                                        <div class="ar-work-title">Ystart</div>
                                         <!--/Project Title-->
 
                                         <!--Project Category-->
