--- a/about.html
+++ b/about.html
@@ -479,7 +479,7 @@
                 <!-- Team Sec -->
                 <div class="grdient" style="background: linear-gradient(1deg, #090e26, #031554);">
                     <img class="bg-team" src="/assets/resources/img/our-team.png" alt="">
-                    <section class="team-s" data-humcolor="#fff" data-scroll>
+                    <!-- <section class="team-s" data-humcolor="#fff" data-scroll>
                         <div class="container text_anim">
                             <h2 class="he"><span>Our Team</span></h2>
                             <p class="parh"><span>
@@ -487,8 +487,8 @@
                                     what we do every day that defines us!
                                 </span></p>
                         </div>
-                    </section>
-                    <section id="sectionPin">
+                    </section> -->
+                    <!-- <section id="sectionPin">
                         <div class="pin-wrap">
 
                             <div class="team-img">
@@ -1571,7 +1571,7 @@
                             </div>
 
                         </div>
-                    </section>
+                    </section> -->
                     <section class="section-container teams-slider">
                         <div class="mobile-container image-1">
                             <div class="slider-element-container">
