--- a/index.html
+++ b/index.html
@@ -682,8 +682,7 @@
 
                         <div class="about-us-content">
                             <div class="welcome-heading d-flex justify-content-sb align-items-start">
-                                <h1 data-textcolor="#000" style="color:#000000; font-size: 3.1em; text-transform: uppercase;
-                            "> <span class="opacity-0" data-scroll data-scroll-delay="0.1"
+                                <h1> <span class="opacity-0" data-scroll data-scroll-delay="0.1"
                                         data-scroll-offset="60">Leveraging the power</span><br />
                                     <span class="opacity-0" data-scroll data-scroll-delay="0.1"
                                         data-scroll-offset="60">of emotion,</span><br /> <span class="opacity-0"
@@ -692,16 +691,12 @@
                                         data-scroll-delay="0.1" data-scroll-offset="60"> and technology,
                                     </span>
                                     <br /> <span class="opacity-0" data-scroll data-scroll-delay="0.1"
-                                        data-scroll-offset="60">we create
-                                    </span><br /> <span class="opacity-0" data-scroll data-scroll-delay="0.1"
-                                        data-scroll-offset="60">digital brand </span><br><span class="opacity-0"
-                                        data-scroll data-scroll-delay="0.1" data-scroll-offset="60">experiences
+                                        data-scroll-offset="60">we create digital brand
+                                    </span><br /><span class="opacity-0" data-scroll data-scroll-delay="0.1"
+                                        data-scroll-offset="60">experiences
                                         that</span><br><span class="opacity-0" data-scroll data-scroll-delay="0.1"
-                                        data-scroll-offset="60">propel your</span><br><span class="opacity-0"
-                                        data-scroll data-scroll-delay="0.1" data-scroll-offset="60">success in the
-                                    </span>
-                                    <br><span class="opacity-0" data-scroll data-scroll-delay="0.1"
-                                        data-scroll-offset="60">enigmatic realm
+                                        data-scroll-offset="60">propel your success in</span><br><span class="opacity-0"
+                                        data-scroll data-scroll-delay="0.1" data-scroll-offset="60"> the enigmatic realm
                                     </span>
                                     <br><span class="opacity-0" data-scroll data-scroll-delay="0.1"
                                         data-scroll-offset="60">of bits & bytes.
@@ -891,7 +886,7 @@
                     </div>
                 </section>
                 <!--Section-->
-                <div class="section-w" style="background:#000;">
+                <div class="section-w" style="background:#000;" data-humcolor="#fff">
 
                     <!--Wrapper-->
                     <div class="wrappers no-gap">
@@ -981,14 +976,15 @@
                                                 <img alt="Project Image" src="./assets/resources/img/work-dmtca.png">
                                             </div>
                                             <!--/Project Image-->
-                                        </a>
-                                        <!--Project Title-->
-                                        <div class="ar-work-title">Dmtca</div>
-                                        <!--/Project Title-->
+                                            <!--Project Title-->
+                                            <div class="ar-work-title">Dmtca</div>
+                                            <!--/Project Title-->
 
-                                        <!--Project Category-->
-                                        <div class="ar-work-cat">Photography</div>
-                                        <!--/Project Category-->
+                                            <!--Project Category-->
+                                            <div class="ar-work-cat">Photography</div>
+                                            <!--/Project Category-->
+                                        </a>
+
                                     </div>
                                     <!--/Project-->
 
@@ -1004,15 +1000,16 @@
                                                 <img alt="Project Image" src="/assets/resources/img/work-quickx.png">
                                             </div>
                                             <!--/Project Image-->
+
+                                            <!--Project Title-->
+                                            <div class="ar-work-title">Quickx</div>
+                                            <!--/Project Title-->
+
+                                            <!--Project Category-->
+                                            <div class="ar-work-cat">Production</div>
+                                            <!--/Project Category-->
                                         </a>
 
-                                        <!--Project Title-->
-                                        <div class="ar-work-title">Quickx</div>
-                                        <!--/Project Title-->
-
-                                        <!--Project Category-->
-                                        <div class="ar-work-cat">Production</div>
-                                        <!--/Project Category-->
 
                                     </div>
                                     <!--/Project-->
@@ -1027,15 +1024,16 @@
                                                 <img alt="Project Image" src="/assets/resources/img/work-ystart.png">
                                             </div>
                                             <!--/Project Image-->
+
+                                            <!--Project Title-->
+                                            <div class="ar-work-title">Ystart</div>
+                                            <!--/Project Title-->
+
+                                            <!--Project Category-->
+                                            <div class="ar-work-cat">Branding</div>
+                                            <!--/Project Category-->
                                         </a>
 
-                                        <!--Project Title-->
-                                        <div class="ar-work-title">Ystart</div>
-                                        <!--/Project Title-->
-
-                                        <!--Project Category-->
-                                        <div class="ar-work-cat">Branding</div>
-                                        <!--/Project Category-->
                                     </div>
                                     <!--/Project-->
                                 </div>
