--- a/services.html
+++ b/services.html
@@ -280,7 +280,7 @@
         <div class="scroll-content smooth-scroll" data-scroll-speed="8">
             <div class="wrapper">
                 <!--top  Section-->
-                <section class="black-bg about-us-section" data-humcolor="#000">
+                <section class="about-us-section" data-humcolor="#000">
                     <div class="about-us-inner d-flex" id="scroll-direction">
                         <div id="test"></div>
                         <div class="about-us-image" data-scroll data-scroll-sticky
@@ -382,25 +382,34 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="flex-con align-center ">
-                            <div class="fle p-right ">
+                        <div class="flex-con align-center " data-scroll>
+                            <div class="fle p-right text_anim">
                                 <h3 class="typ" id="#1">
-                                    TECHNOLOGY</h3>
+                                    <span>
+                                        TECHNOLOGY
+                                    </span>
+                                </h3>
                                 <div class="content-p" data-scroll data-scroll-offset="100">
-                                    <p>Front-End Development, Web Applications, E-Commerce Platforms, Native & Hybrid
-                                        Mobile Apps, Dynamic Websites, Functional & UA Testing and System Integrations,
-                                        Support & Maintenance.
+                                    <p>
+                                        <span>Front-End Development, Web Applications, E-Commerce Platforms, Native &
+                                            Hybrid
+                                            Mobile Apps, Dynamic Websites, Functional & UA Testing and System
+                                            Integrations,
+                                            Support & Maintenance.</span>
                                     </p>
-                                    <div class="en-form-submit"><a class="en-btn en-btn_send" data-magnetic
-                                            data-cursor="-opaque"><span data-text="Read More">Read More</span></a>
+                                    <div class="en-form-submit">
+                                        <span>
+                                            <a class="en-btn en-btn_send" data-magnetic data-cursor="-opaque"><span
+                                                    data-text="Read More">Read More</span></a>
+                                        </span>
                                     </div>
                                 </div>
                             </div>
-                            <div class="image">
+                            <div class="image" text_anim>
                                 <img src="/assets/resources/img/Service-elements/Service-03.svg" alt="" />
                             </div>
                         </div>
-                        <div class="flex-con align-center  ">
+                        <div class="flex-con align-center  data-scroll">
                             <div class="image">
                                 <img src="/assets/resources/img/Service-elements/Service-04.svg" alt="" />
                             </div>
