--- a/strategy.html
+++ b/strategy.html
@@ -282,6 +282,14 @@
                 <!--top  Section-->
                 <section class="ser-hero strategy" data-scroll data-bgcolor="#fff" data-humcolor="#000"
                     data-textcolor="#000">
+                    <video autoplay="" loop="" style="background-image:url;     position: absolute;
+                    left: 0;
+                    right: 0;
+                    margin: 0 auto;
+                    object-fit: cover;
+                    width: 100%;" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
+                        <source src="/assets/resources/Service-bg-1.mp4" data-wf-ignore="true">
+                    </video>
                     <div class="el1 el-bg"></div>
                     <div class="el2 el-bg"></div>
                     <div class="el3 el-bg"></div>
